[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/PatrickHandSC80.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/QuizManager.gd" type="Script" id=2]
[ext_resource path="res://Pokemons/Sprites/5.png" type="Texture" id=3]
[ext_resource path="res://Sounds/correct.wav" type="AudioStream" id=5]
[ext_resource path="res://Textures/Backgrounds/1.png" type="Texture" id=6]

[node name="Quiz" type="Node"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 7

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.134
margin_bottom = 0.279999
custom_fonts/font = ExtResource( 1 )
text = "Quiz title"
align = 1
valign = 1

[node name="Texture" type="TextureRect" parent="."]
anchor_left = 0.371
anchor_top = 0.051
anchor_right = 0.629
anchor_bottom = 0.5
margin_left = 0.679932
margin_top = 71.92
margin_right = -0.680054
margin_bottom = 81.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="AnswerContainer" type="GridContainer" parent="."]
anchor_top = 0.631
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.519958
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1920, 398 )
columns = 2

[node name="AudioEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="QuestionChangeTimer" type="Timer" parent="."]

[node name="TextureTween" type="Tween" parent="."]

[connection signal="timeout" from="QuestionChangeTimer" to="." method="on_question_change_timer_timeout"]
